# ALEval

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  judge_eval.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
agent_artefacts/aleval/review/: SUMMARY.md
agent_artefacts/aleval/validity/: VALIDITY_REPORT.md
docs/: ARCHITECTURE.md  EXTENDING.md  FAQ.md  GLOSSARY.md  LCB_MIN_FRONTIER_MODELS_EXPERIMENT.md  LCB_MIN_LEGACY_MODELS_EXPERIMENT.md  LW Post.md  WORKFLOW.md
documentation/: AUDIT_V2_REPORT.md  DEVELOPMENT_ENVIRONMENT.md  INSPECT_COMPLIANCE_REPORT.md  LLM_ARENA_EXPERIMENT_REPORT.md
documentation/archive/: AUDIT_REPORT.md  AUDIT_V2_REPORT.md  INSPECT_COMPLIANCE_REPORT.md  SOLUTION_REPORT.md
documentation_archive/: ALEVAL_EXPERIMENT_REPORT_CLEAN.md  AUDIT_REPORT.md  DEVELOPMENT_ENVIRONMENT.md  LLM_ARENA_EXPERIMENT_REPORT.md  SOLUTION_REPORT.md  lw post v1.md  lw post v2.md
experiments/: README.md  collect_results.sh  config.sh  export_campaign_report.py  model_manifest.example.yaml  run_all.sh  run_campaign.py  run_lcb_min_frontier_models.sh  run_lcb_min_frontier_subset.sh  run_lcb_min_gpt_claude_subset.sh  run_lcb_min_legacy_models.sh  run_model.sh  run_parallel_smoke_matrix.sh  run_qwen_glm_rerun_batch.sh  run_targeted_parallel_batch.sh  summarize.py
reports/aleval_lcb_min_frontier_models/: experiment_manifest.json  results_table.csv  results_table.md  selected_eval_files.json
reports/aleval_lcb_min_frontier_models/combined/: judged_samples.csv  (+2 more)
reports/aleval_lcb_min_legacy_models/: experiment_manifest.json  results_table.csv  results_table.md  selected_eval_files.json
scripts/: print_core_versions.py
src/impossiblebench/: __init__.py  _registry.py  aleval_report.py  apply_patch.py  callout.py  eval.yaml  livecodebench_agent_full.py  livecodebench_agent_mini.py  livecodebench_scorers.py  livecodebench_tasks.py  swebench_agent_full.py  swebench_agent_mini.py  swebench_dummytest.py  swebench_scorers.py  swebench_tasks.py
tests/: conftest.py  test_callout.py  test_data_loader.py  test_livecodebench.py  test_swebench.py
tests/e2e/: test_lcb_e2e.py  test_swe_e2e.py
tests/integration/: test_lcb_minimal_callout.py  test_lcb_tools_callout.py  test_report_pipeline.py  test_scorer_metadata.py  test_swe_minimal_callout.py  test_swe_tools_callout.py
tests/unit/: test_callout_classify.py  test_callout_label.py  test_callout_solver.py  test_find_code.py  test_record_to_sample.py  test_split_validation.py  test_task_name_parser.py  test_task_structure.py
tests/utils/: task_assertions.py
writeups/: lesswrong_post_draft.md  linkedin_post_draft.md  make_charts.py  mini_paper_template.md  twitter_thread_draft.md
(+52 files in other folders)
