[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "impossiblebench"
version = "0.1.0"
description = "ALEval: Measuring LLM agent honesty after reward hacking on impossible tasks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "ALEval Team"}]
keywords = ["llm", "benchmark", "evaluation", "reward-hacking", "swe-bench", "livecodebench"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "inspect_ai>=0.3.0",
    "pandas>=2.0.0",
    "datasets>=3.0.0",
    "tqdm>=4.60.0",
    "jsonlines>=4.0.0",
    "platformdirs>=4.0.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
swe = [
    "inspect_evals[swe_bench] @ git+https://github.com/UKGovernmentBEIS/inspect_evals",
    "swebench>=4.0.0",
]
analysis = [
    "litellm>=1.50.0",
    "matplotlib>=3.8.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-dotenv>=0.5",
]
dev = [
    "ruff>=0.13.2",
    "mypy>=1.10",
    "pre-commit>=3.0",
]

[project.scripts]
aleval-report = "impossiblebench.report.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
required-version = ">=0.13.2"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["impossiblebench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-rA --color=yes"
asyncio_mode = "auto"
markers = [
    "dataset_download: tests that download datasets",
    "huggingface: tests that call Hugging Face APIs",
    "docker: tests that require docker sandboxes",
    "slow(duration): tests expected to take >10s",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
